@@ -231,13 +231,6 @@ public class HttpSolrCall {
     log.info("HttpSolrCall.init({}?{})", req.getRequestURL(), req.getQueryString());
 
 
-    // unused feature ?
-    int idx = path.indexOf(':');
-    if (idx > 0) {
-      // save the portion after the ':' for a 'handler' path parameter
-      path = path.substring(0, idx);
-    }
-
     // Check for container handlers
     handler = cores.getRequestHandler(path);
     if (handler != null) {
@@ -249,7 +242,7 @@ public class HttpSolrCall {
     }
 
     // Parse a core or collection name from the path and attempt to see if it's a core name
-    idx = path.indexOf("/", 1);
+    int idx = path.indexOf("/", 1);
     if (idx > 1) {
       origCorename = path.substring(1, idx);
 
